WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108784
Fix build warning after
r141648
https://bugs.webkit.org/show_bug.cgi?id=108784
Summary
Fix build warning after r141648
KwangYong Choi
Reported
2013-02-03 18:25:20 PST
/home/cky/open-source/WebKit/Source/WebKit2/UIProcess/Storage/StorageManager.cpp:52:6: warning: unused parameter ‘storageAreaID’ [-Wunused-parameter] /home/cky/open-source/WebKit/Source/WebKit2/UIProcess/Storage/StorageManager.cpp:52:6: warning: unused parameter ‘storageNamespaceID’ [-Wunused-parameter] /home/cky/open-source/WebKit/Source/WebKit2/UIProcess/Storage/StorageManager.cpp:56:6: warning: unused parameter ‘storageAreaID’ [-Wunused-parameter]
Attachments
Patch
(1.53 KB, patch)
2013-02-03 18:29 PST
,
KwangYong Choi
no flags
Details
Formatted Diff
Diff
Patch
(1.57 KB, patch)
2013-02-03 19:32 PST
,
KwangYong Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
KwangYong Choi
Comment 1
2013-02-03 18:29:23 PST
Created
attachment 186286
[details]
Patch
Kentaro Hara
Comment 2
2013-02-03 18:34:43 PST
Comment on
attachment 186286
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186286&action=review
> Source/WebKit2/UIProcess/Storage/StorageManager.cpp:52 > -void StorageManager::createStorageArea(CoreIPC::Connection*, uint64_t storageAreaID, uint64_t storageNamespaceID, const SecurityOriginData&) > +void StorageManager::createStorageArea(CoreIPC::Connection*, uint64_t, uint64_t, const SecurityOriginData&)
You might want to use 'uint64_t /* storageAreaID */, uint64_t /* storageNamespaceID */', because otherwise you cannot distinguish two parameters.
KwangYong Choi
Comment 3
2013-02-03 18:39:16 PST
Comment on
attachment 186286
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186286&action=review
>> Source/WebKit2/UIProcess/Storage/StorageManager.cpp:52 >> +void StorageManager::createStorageArea(CoreIPC::Connection*, uint64_t, uint64_t, const SecurityOriginData&) > > You might want to use 'uint64_t /* storageAreaID */, uint64_t /* storageNamespaceID */', because otherwise you cannot distinguish two parameters.
Ok I will change.
KwangYong Choi
Comment 4
2013-02-03 19:32:28 PST
Created
attachment 186288
[details]
Patch
Kentaro Hara
Comment 5
2013-02-03 19:33:00 PST
Comment on
attachment 186288
[details]
Patch thanks
WebKit Review Bot
Comment 6
2013-02-03 20:27:20 PST
Comment on
attachment 186288
[details]
Patch Clearing flags on attachment: 186288 Committed
r141732
: <
http://trac.webkit.org/changeset/141732
>
WebKit Review Bot
Comment 7
2013-02-03 20:27:25 PST
All reviewed patches have been landed. Closing bug.
Anders Carlsson
Comment 8
2013-02-04 10:14:32 PST
(In reply to
comment #5
)
> (From update of
attachment 186288
[details]
) > thanks
Kentaro, this is a WebKit2 patch and needs to be reviewed by a WebKit2 owner. This is not the right fix either. The right fix is to use UNUSED_PARAM.
Kentaro Hara
Comment 9
2013-02-04 16:10:58 PST
(In reply to
comment #8
)
> Kentaro, this is a WebKit2 patch and needs to be reviewed by a WebKit2 owner. This is not the right fix either. The right fix is to use UNUSED_PARAM.
I'm sorry. I'll be careful. I think that was a right fix. We use UNUSED_PARAM only when a parameter is in an #if macro. (Please look at this discussion:
http://markmail.org/message/jv3ncbuhropkkzoq
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug