Fix build warning after r141648 https://bugs.webkit.org/show_bug.cgi?id=108784

Patch by KwangYong Choi <ky0.choi@samsung.com> on 2013-02-03
Reviewed by Kentaro Hara.

Fix -Wunused-parameter build warning.

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::createStorageArea):
(WebKit::StorageManager::destroyStorageArea):

Canonical link: https://commits.webkit.org/126994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141732 268f45cc-cd09-0410-ab3c-d52691b4dbfc